# columbus

./: .gitignore  .gitmodules  JOURNAL.md  README.md  aws.py  aws_adv_function.py  bunny.py  extractlogs.py  gcp.py  matrix.txt  plot.py  plotv2.py  rdrand.sh  results_200.csv  run.sh  run_membus.sh  setup_membus.sh
api/: awsapi-cli.py  awsapi.py  awsapi2.py  awsapi_membus.py  gcpapi.py  run_adv.py  run_victim.py
aws/: .gitignore  analyze.py  channel.sh  deploy.sh  invoke.py  plot.py  plot.sh  pvalues.sh  run_membus.sh  samples.sh  setup_membus.sh  show.sh
aws/idexchange/cpp/: CMakeLists.txt  RSJparser.tcc  local_main.cpp  local_membus  main.cpp  ttest.cpp  util.cpp  util.h
azure/: plot.py  plot.sh
data/: api_results_50.csv
fns/: api_params_aws.py  api_request_py27.py  aws_api.py  finalgcpapi.py
functions/: adv_aws_rdrand.py  adv_aws_rdrand_2300.py  adv_aws_rdrand_2500.py  adv_gcp_rdrand.py  adv_gcp_rdseed_disabled.py  adv_gcp_rdseed_enabled.py  adversary_gcp.py  aws_rdrand.py  aws_rdrand_2300.py  aws_rdrand_2500.py  gcp_rdseed_enabled.py  gcp_rseed_disabled.py  init_rdrand_aws.py  rdrand_aws.py  rdrand_gcp.py
gcp/: plot.sh
membus/: deploy.sh  main.cpp
membus_fingerprint/: README.md  run_membus.sh  setup_membus.sh
paper/: .gitignore  1-abstract.tex  2-intro.tex  3-background.tex  4-motivation.tex  5-method-2.tex  5-method.tex  6-eval.tex  6a-study.tex  7-discussion.tex  8-related.tex  8a-conclusion.tex  9-references.bib  Makefile  annotations.tex  paper.bib  paper.tex
rdrand/: how-to.txt  lambda_function.py
scripts-cli/: createFunctions.sh  (+1 more)
(+725 files in other folders)
